[tool.poetry]
name = "khdl"
version = "0.1.0"
description = "Download video game soundtracks from https://downloads.khinsider.com"
authors = ["Edd Salkield <edd@salkield.uk>"]
license = "GPLv3"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
khdl = 'src:main'
